--- a/grade-converter/grade.html
+++ b/grade-converter/grade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="grade.css">
     <title>Grade Converter</title>
 </head>
 <body>
@@ -15,6 +15,6 @@
     <h3 id="gradeShow"></h3>
    </div>
 
-    <script src="main.js"></script>
+    <script src="grade.js"></script>
 </body>
 </html>
