changed the fonts

--- a/speed-detector/speed.html
+++ b/speed-detector/speed.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>speed Detector</h1>
+        <h1>Speed Detector</h1>
         <input placeholder="Enter Speed" id="speed" required>
         <button onClick="Convert()" id="button">Submit</button>
         <h3 id="resultSpeed"></h3>
