added nat slary calculator

--- a/grade-converter/grade.html
+++ b/grade-converter/grade.html
@@ -12,7 +12,7 @@
     <h1>write your marks here to see your grade</h1>
     <div>
       <!--input for writing the grades-->
-      <input required id="grade" placeholder="marks here" onClick="location.reload">
+      <input required id="grade" placeholder="marks here">
       <button onClick="Convert()" id = "button">Grade</button>
     <h3 id="gradeShow"></h3>
    </div>
