--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="grade-converter/grade.html" target="_blank">Grade Converter</a></li>
             <li><a href="speed-detector/speed.html" target="_blank">Speed Detector</a></li>
-            <li><a href="#">Next Salary Calculator</a></li>
+            <li><a href="Net-Salary-Calculator/salary.html" target="_blank">Next Salary Calculator</a></li>
         </ul>
     </div>
 </body>
